; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_dev.c_dn_ifaddr_notify.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/decnet/extr_dn_dev.c_dn_ifaddr_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dn_ifaddr = type { i32 }
%struct.sk_buff = type { i32 }

@ENOBUFS = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@EMSGSIZE = common dso_local global i32 0, align 4
@init_net = common dso_local global i32 0, align 4
@RTNLGRP_DECnet_IFADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.dn_ifaddr*)* @dn_ifaddr_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dn_ifaddr_notify(i32 %0, %struct.dn_ifaddr* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.dn_ifaddr*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.dn_ifaddr* %1, %struct.dn_ifaddr** %4, align 8
  %7 = load i32, i32* @ENOBUFS, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %6, align 4
  %9 = call i32 (...) @dn_ifaddr_nlmsg_size()
  %10 = load i32, i32* @GFP_KERNEL, align 4
  %11 = call %struct.sk_buff* @alloc_skb(i32 %9, i32 %10)
  store %struct.sk_buff* %11, %struct.sk_buff** %5, align 8
  %12 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %13 = icmp eq %struct.sk_buff* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %36

15:                                               ; preds = %2
  %16 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %17 = load %struct.dn_ifaddr*, %struct.dn_ifaddr** %4, align 8
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @dn_nl_fill_ifaddr(%struct.sk_buff* %16, %struct.dn_ifaddr* %17, i32 0, i32 0, i32 %18, i32 0)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %31

22:                                               ; preds = %15
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* @EMSGSIZE, align 4
  %25 = sub nsw i32 0, %24
  %26 = icmp eq i32 %23, %25
  %27 = zext i1 %26 to i32
  %28 = call i32 @WARN_ON(i32 %27)
  %29 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %30 = call i32 @kfree_skb(%struct.sk_buff* %29)
  br label %36

31:                                               ; preds = %15
  %32 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %33 = load i32, i32* @RTNLGRP_DECnet_IFADDR, align 4
  %34 = load i32, i32* @GFP_KERNEL, align 4
  %35 = call i32 @rtnl_notify(%struct.sk_buff* %32, i32* @init_net, i32 0, i32 %33, i32* null, i32 %34)
  br label %43

36:                                               ; preds = %22, %14
  %37 = load i32, i32* %6, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %36
  %40 = load i32, i32* @RTNLGRP_DECnet_IFADDR, align 4
  %41 = load i32, i32* %6, align 4
  %42 = call i32 @rtnl_set_sk_err(i32* @init_net, i32 %40, i32 %41)
  br label %43

43:                                               ; preds = %31, %39, %36
  ret void
}

declare dso_local %struct.sk_buff* @alloc_skb(i32, i32) #1

declare dso_local i32 @dn_ifaddr_nlmsg_size(...) #1

declare dso_local i32 @dn_nl_fill_ifaddr(%struct.sk_buff*, %struct.dn_ifaddr*, i32, i32, i32, i32) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @kfree_skb(%struct.sk_buff*) #1

declare dso_local i32 @rtnl_notify(%struct.sk_buff*, i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @rtnl_set_sk_err(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
